Fixed navigation bar to look as it should on mobile screens

--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ li a {
     display: block;
     color: white;
     text-align: left;
-    padding: 18px 25px;
+    padding: 18px 21px;
     text-decoration: none;
     font-size: 20px;
 }
